2022-07-06  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.0 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.0: Rattlesnake';git push
	git tag -a 5.1.0 -m 'all: filters, cmp_sng, CCR, nc 4.9.0; ncremap fix sub-sgs nrm, add ssgs thr';git push --tags

	* Reformulate implementation of filter default levels to include BLOSC

	* Rework listing of BLOSC filters

	* BLOSC filters work! Allow BLOSC Shuffle to pre-empt HDF5 Shuffle

2022-07-04  Charlie Zender  <zender@uci.edu>

	* Bump next version to 5.1.0 instead of 5.0.8

2022-07-03  Charlie Zender  <zender@uci.edu>

	* Merge CR figures with text more naturally

	* NCO 5.0.8-beta03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.8-beta03: Backslapper';git push
	git tag -a 5.0.8-beta03 -m 'all: documentation, polishing, default levels, dns';git push --tags

	* Add quantization/compression CR figures to documentation and to distribution

	* Add nco_flt_dns codec to do DEFLATE No Shuffle without recompilation

	* Incorporate feedback from E. Hartnett into documentation

2022-07-01  Charlie Zender  <zender@uci.edu>

	* Build/verify NCO with Intel on Cori

	* Build/verify NCO with GNU on Perlmutter

	* Merge three MSVC changes suggested by Pedro Vicente

2022-06-30  Charlie Zender  <zender@uci.edu>

	* Update homepage with recent presentations/pubs

	* Verify runtime executables (except ncap2) work on NERSC perlmutter

	* Prepare 5.0.8 release documentation

2022-06-29  Charlie Zender  <zender@uci.edu>

	* Document filter features and compression best practices

	* Add PPC default synonyms dfl, global, glb

	* Change name/acronym from BitGroomRound (RND) to BitGroomBitRound (BGB)

	* Add default levels for BitGroom, BitRound, and GranularBR

	* Re-order enum list to accord better with filter IDs

2022-06-28  Charlie Zender  <zender@uci.edu>

	* Add default level for Bzip2

	* Insert default in place of omitted levels for DEFLATE, Shuffle, Zstandard, regardless of filter location
