@@ -4,7 +4,9 @@
 	cd ~/nco;git commit -a -m 'Version 5.1.0: Rattlesnake';git push
 	git tag -a 5.1.0 -m 'all: filters, cmp_sng, CCR, nc 4.9.0; ncremap fix sub-sgs nrm, add ssgs thr';git push --tags
 
-	* Reformulate implementation of filter default levels to include BLOSC
+	* Default Blosc to LZ, decode Blosc subcompressors in _Filter metadata
+
+	* Reformulate implementation of default levels to include BLOSC filters
 
 	* Rework listing of BLOSC filters
 
